--- a/palindrome/package.json
+++ b/palindrome/package.json
@@ -2,7 +2,10 @@
   "name": "palindrome",
   "version": "0.0.0",
   "description": "",
-  "main": "src/main.js",
+  "main": "index.js",
+  "directories": {
+    "bin": "bin"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
