--- a/parsing/package.json
+++ b/parsing/package.json
@@ -12,6 +12,11 @@
   "private": true,
   "dependencies": {
     "loquat": "^1.3.2",
+    "loquat-char": "git+https://github.com/susisu/loquat-char.git",
+    "loquat-combinators": "git+https://github.com/susisu/loquat-combinators.git",
+    "loquat-core": "git+https://github.com/susisu/loquat-core.git",
+    "loquat-prim": "git+https://github.com/susisu/loquat-prim.git",
+    "parsimmon": "^0.9.2",
     "pegjs": "^0.9.0"
   }
 }
