--- a/react/first/package.json
+++ b/react/first/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@susius/react-first",
+  "name": "@susisu/react-first",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
