--- a/system-f/package.json
+++ b/system-f/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "eslint": "^3.19.0",
+    "eslint-plugin-disable": "^0.3.0",
     "eslint-plugin-flowtype": "^2.33.0",
     "flow-bin": "^0.46.0"
   }
