--- a/parsing/package.json
+++ b/parsing/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "pegjs ./peg_src.pegjs ./peg_parser.js"
+    "build": "pegjs -o ./peg_parser.js ./peg_src.pegjs"
   },
   "author": "Susisu <susisu2413@yahoo.co.jp> (https://github.com/susisu)",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "loquat": "^1.3.2",
-    "loquat-char": "git+https://github.com/susisu/loquat-char.git",
-    "loquat-combinators": "git+https://github.com/susisu/loquat-combinators.git",
-    "loquat-core": "git+https://github.com/susisu/loquat-core.git",
-    "loquat-prim": "git+https://github.com/susisu/loquat-prim.git",
-    "parsimmon": "^0.9.2",
-    "pegjs": "^0.9.0"
+    "loquat-char": "^2.0.1",
+    "loquat-combinators": "^2.0.0",
+    "loquat-core": "^2.0.1",
+    "loquat-prim": "^2.0.1",
+    "parsimmon": "^1.3.0",
+    "pegjs": "^0.10.0"
   }
 }
